--- a/src/aantekeningen.njk
+++ b/src/aantekeningen.njk
@@ -14,7 +14,8 @@ layout: 'base.njk'
         {# kijk in de post van collection.post > vind de data > pak de title  #}
             <h2> {{ post.data.title }}</h2>
             <p>door {{ post.data.presentator }}</p>
-            <p>{{ post.data.date }}</p>
+            {# | postDate past de addFilter toe zodat alleen de datum word getoont #}
+            <p>{{ post.data.date | postDate }}</p>
             <p>{{ post.data.description }}</p>
 
     </li>
