css apart gelinkt voor beide paginas

--- a/src/index.njk
+++ b/src/index.njk
@@ -1,6 +1,7 @@
 ---
 layout: 'base.njk'
-title: test
+title: Home
+css: /style.css
 ---
     <!-- Typing animation and carousel -->
     <section class="animation-section">
