--- a/public/aantekeningen.css
+++ b/public/aantekeningen.css
@@ -2,6 +2,7 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+    font-family: Poppins;
 }
 section{
     background-color: #111111;
@@ -11,4 +12,10 @@ h1, h2, h3, p{
 }
 h1{
     font-size: 20px;
+}
+
+li{
+    border: 1px solid red;
+    margin: 10px;
+    padding: 10px;
 }
