--- a/src/style.css
+++ b/src/style.css
@@ -1,5 +1,5 @@
 * {
-    font-family: sans-serif;
+    font-family: Poppins;
     margin: 0;
     padding: 0;
     box-sizing: border-box;
@@ -121,7 +121,7 @@ section{
 .carousel {
     display: inline-block;
     overflow: hidden;
-    height: 1.15em; /* Aangepast aan de line-height */
+    height: 1.3em; /* Aangepast aan de line-height */
     vertical-align: bottom;
 }
 
