added styling for aantekeningen

--- a/src/index.njk
+++ b/src/index.njk
@@ -23,6 +23,7 @@ css: /style.css
     </section>
 
     <section id="semesters" class="semesters">
+      <a href="/aantekeningen">NOTES TEST</a>
       <h2>Semesters</h2>
         <div class="semester-container">
           <article>
