--- a/public/aantekeningen.css
+++ b/public/aantekeningen.css
@@ -3,19 +3,30 @@
     padding: 0;
     box-sizing: border-box;
     font-family: Poppins;
+    text-decoration: none;
+    list-style: none;
 }
 section{
+    /* padding: 40px; */
+    height: 100%;
+    width: 100%;
     background-color: #111111;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
 }
 h1, h2, h3, p{
     color: white;
 }
 h1{
-    font-size: 20px;
+    font-size: 2em;
+    padding-top: 20px ;
 }
 
 li{
-    border: 1px solid red;
-    margin: 10px;
+    border: 2px solid #353535;
+    border-radius: 5px;
+    margin: 20px;
     padding: 10px;
 }
