--- a/src/aantekeningen.njk
+++ b/src/aantekeningen.njk
@@ -5,7 +5,7 @@ css: /aantekeningen.css
 ---
 
 <section>
-<h1 class="section-title"> Aantekeningen </h1>
+<h1 class="section-title"> Semester 3 </h1>
 
 <ul role="list" class="articles-list">
 {#  when u use your tags it will group it in a collection #}
@@ -13,10 +13,11 @@ css: /aantekeningen.css
     <li>
         {# kijk in de post van collection.post > vind de data > pak de title  #}
             <h2> {{ post.data.title }}</h2>
-            <p>door {{ post.data.presentator }}</p>
+            <p>door {{ post.data.presentator }} op {{ post.data.date | postDate }}</p>
             {# | postDate past de addFilter toe zodat alleen de datum word getoont #}
-            <p>{{ post.data.date | postDate }}</p>
+            <br>
             <p>{{ post.data.description }}</p>
+            <a href="">Lees meer</a>
 
     </li>
     {%- endfor -%}
@@ -24,8 +25,3 @@ css: /aantekeningen.css
 </ul>
 
 </section>
-
-title: We Love Web - Nicolas Garnier
-presentator: Nicolas Garnier
-date: 4-10-2024
-description: We Love Web college over "Creative Developer"
