--- a/src/aantekeningen.njk
+++ b/src/aantekeningen.njk
@@ -13,11 +13,11 @@ css: /aantekeningen.css
     <li>
         {# kijk in de post van collection.post > vind de data > pak de title  #}
             <h2> {{ post.data.title }}</h2>
-            <p>door {{ post.data.presentator }} op {{ post.data.date | postDate }}</p>
+            <p class="p-small">door {{ post.data.presentator }} op {{ post.data.date | postDate }}</p>
             {# | postDate past de addFilter toe zodat alleen de datum word getoont #}
             <br>
             <p>{{ post.data.description }}</p>
-            <a href="">Lees meer</a>
+            <a href="{{ post.url }}">Lees meer</a>
 
     </li>
     {%- endfor -%}
