--- a/src/detail.css
+++ b/src/detail.css
@@ -7,25 +7,29 @@
     list-style: none;
 }
 section{
-    /* padding: 40px; */
+    padding: 40px;
     height: 100%;
     width: 100%;
     background-color: #111111;
     display: flex;
     flex-direction: column;
     justify-content: center;
-    align-items: center;
+    /* align-items: center; */
 }
 h1, h2, h3, p {
     color: white;
 }
+h1, h2, h3{
+    margin-bottom: 16px;
+    margin-top: 16px;
+}
 h1{
-    font-size: 2em;
+    font-size: 2rem;
     padding-top: 20px;
     font-weight: bold;
 }
 h2{
-    font-size: 1.5em;
+    font-size: 1.5rem;
     font-weight: bold;
 }
 .p-small, a{
@@ -39,21 +43,16 @@ a{
     color: grey;
     margin-top: 10px;
     background-color: transparent;
-    margin-left: auto;
 }
 a:hover{
     color: #111111;
     background-color: grey;
     transition: .5s;
 }
-h2, p{
-    font-size: 20px;
-}
+
 li{
     border: 2px solid #353535;
     border-radius: 5px;
     margin: 20px;
     padding: 10px;
-    display: flex;
-    flex-direction: column;
 }
