--- a/public/detail.css
+++ b/public/detail.css
@@ -4,20 +4,18 @@
     box-sizing: border-box;
     font-family: Poppins;
     text-decoration: none;
-    list-style: none;
+    color: white;
 }
 section{
     padding: 40px;
     height: 100%;
+    min-height: 100vh;
     width: 100%;
     background-color: #111111;
     display: flex;
     flex-direction: column;
     justify-content: center;
     /* align-items: center; */
-}
-h1, h2, h3, p {
-    color: white;
 }
 h1, h2, h3{
     margin-bottom: 16px;
@@ -50,9 +48,3 @@ a:hover{
     transition: .5s;
 }
 
-li{
-    border: 2px solid #353535;
-    border-radius: 5px;
-    margin: 20px;
-    padding: 10px;
-}
