--- a/src/style.css
+++ b/src/style.css
@@ -7,9 +7,13 @@
     color: white;
 }
 @font-face {
-    font-family: 'Poppins';
+    font-family: 'Roboto Flexx';
     font-display: swap;
 }
+body {
+    font-family: 'Roboto Flex', sans-serif;
+  }
+  
 article{
     display: flex;
     flex-direction: column;
@@ -42,7 +46,8 @@ body {
     flex-direction: column;
     align-items: center;
     justify-content: flex-start; /* Zorgt ervoor dat alles vanaf boven begint */
-    background-color: #111111;
+    /* background-color: #111111; */
+    background-color: black;
 }
 
 .animation-section {
@@ -71,6 +76,7 @@ section, .nav-section{
 }
 
 .typing {
+    /* font-size: 150px; */
     white-space: nowrap;
     overflow: hidden;
     border-right: 3px solid;
@@ -172,10 +178,16 @@ section, .nav-section{
     .wrapper {
         font-size: 2em;
     }
+    .typing{
+        font-size: 80px;
+    }
 }
 
 @media only screen and (min-width: 900px) {
     .wrapper {
         font-size: 3em;
+    }
+    .typing{
+        font-size: 100px;
     }
 }
