--- a/src/portfolio.njk
+++ b/src/portfolio.njk
@@ -5,9 +5,23 @@ css: /portfolio.css
 ---
 
 <section>
-
     <h1>LEMUEL</h1>
+    <p>frontend</p>
+    <p>designer & developer</p>
     <h2>MAGSINO</h2>
 
+
 </section>
+
+<section>
+
+    <ul>
+        <li>About me</li>
+        <li>Projects</li>
+        <li>Contact</li>
+    </ul>
+
+</section>
+
+
 
