--- a/public/style.css
+++ b/public/style.css
@@ -7,6 +7,7 @@
     color: white;
 }
 @font-face {
+    src: url(https://fonts.googleapis.com/css2?family=Roboto+Flex:wght@400&display=swap);
     font-family: 'Roboto Flexx';
     font-display: swap;
 }
