--- a/src/index.njk
+++ b/src/index.njk
@@ -1,29 +1,27 @@
 ---
 layout: 'base.njk'
 title: Home
-css: /style.css
+css: /portfolio.css
 ---
-    <!-- Typing animation and carousel -->
-   <section class="animation-section">
-        <div class="wrapper">
-            <h1 class="typing">
-                We
-                <span class="carousel">
-                    <span class="change_inner">
-                        <span class="element"> Love</span>
-                        <span class="element"> ❤️</span>
-                        <span class="element"> Love</span>
-                        <span class="element"> ❤️</span>
-                    </span>
-                </span>
-                Web
-            </h1>
-        </div>
-        <a href="#weloveweb" class="skip">scroll</a>
-    </section>
- 
-    <section class="nav-section" id="weloveweb">
-       <a href="/portfolio">portfolio</a>
-       <a href="/aantekeningen">we love web</a>
-    </section>
+
+<section>
+    <h1 class="scroll-animate">LEMUEL</h1>
+    <p>frontend</p>
+    <p>designer & developer</p>
+    <h2 class="scroll-animate">MAGSINO</h2>
+
+
+</section>
+
+<section>
+
+    <ul>
+        <li>About me</li>
+        <li>Projects</li>
+        <li>Contact</li>
+    </ul>
+
+</section>
+
+
 
