--- a/src/portfolio.css
+++ b/src/portfolio.css
@@ -1,3 +1,43 @@
+
+.projects{
+    background-color: black;
+    color: white;
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+.projects h3{
+    padding-top: 10dvh;
+    font-size: 2rem;
+    margin-bottom: 10dvh;
+}
+.projects ul{
+    gap: 10px;
+    align-self: self-start;
+    margin-left: 10dvw;
+}
+.projects li{
+    font-size: 1.2rem;
+    /* margin: 5px; */
+    padding: 1rem;
+    list-style-type: none;
+}
+.projects a{
+    font-size: 1.2rem;
+    margin: 5px;
+    font-weight: bolder;
+}
+.projects a:hover{
+    text-decoration: underline;
+}
+.projects p{
+    font-size: 1rem;
+    margin: 5px;
+    transform: translateX(1rem);
+}
+
+/*  */
 *{
     margin: 0;
     padding: 0;
@@ -6,8 +46,8 @@
     text-decoration: none;
     color: white;
 }
-section{
-    height: 100vh;
+section:first-of-type{
+    height: 100dvh;
     width: 100%;
     background-color: black;
     display: flex;
@@ -34,7 +74,7 @@ h2{
     animation-fill-mode: forwards;
     transition-duration: 2s ;
 }
-p{
+section:first-of-type > p{
     animation: fade-in;
     animation-duration: .6s;
     animation-delay: 2s;
