--- a/public/style.css
+++ b/public/style.css
@@ -202,3 +202,13 @@ section, .nav-section{
 
 /*  */
 
+li{
+    width: 370px;
+    height: 230x;
+    border: 2px solid #353535;
+    border-radius: 5px;
+    margin: 20px;
+    padding: 10px;
+    display: flex;
+    flex-direction: column;
+}
