--- a/src/aantekeningen.njk
+++ b/src/aantekeningen.njk
@@ -8,17 +8,16 @@ css: /aantekeningen.css
 <h1 class="section-title"> Semester 3 </h1>
 
 <ul role="list" class="articles-list">
-{#  when u use your tags it will group it in a collection #}
-    {%- for  post in collections.post -%}
-    <li>
-        {# kijk in de post van collection.post > vind de data > pak de title  #}
+<!-- {#  when u use your tags it will group it in a collection #} -->
+    <!-- {%- for  post in collections.post -%} -->
+    <li class="posts">
+        <!-- {# kijk in de post van collection.post > vind de data > pak de title  #} -->
             <h2> {{ post.data.title }}</h2>
             <p class="p-small"><em>door {{ post.data.presentator }} op {{ post.data.date | postDate }}</em></p>
-            {# | postDate past de addFilter toe zodat alleen de datum word getoont #}
+            <!-- {# | postDate past de addFilter toe zodat alleen de datum word getoont #} -->
             <br>
             <p>{{ post.data.description }}</p>
             <a href="{{ post.url }}">Lees meer</a>
-
     </li>
     {%- endfor -%}
 
