--- a/src/pages/weloveweb.njk
+++ b/src/pages/weloveweb.njk
@@ -27,26 +27,23 @@ css: /style.css
        <a href="/aantekeningen">we love web</a>
     </section> #}
 
-    <section>
-<h1 class="section-title"> Semester 3 </h1>
+<section>
+    <h1 class="section-title"> Semester 3 </h1>
 
-<ul role="list" class="articles-list">
-{#  when u use your tags it will group it in a collection #}
-    {%- for  post in collections.post -%}
-    <li>
-        {# kijk in de post van collection.post > vind de data > pak de title  #}
-            <h2> {{ post.data.title }}</h2>
-            <p class="p-small"><em>door {{ post.data.presentator }} op {{ post.data.date | postDate }}</em></p>
-            {# | postDate past de addFilter toe zodat alleen de datum word getoont #}
-            <br>
-            <p>{{ post.data.description }}</p>
-            <a href="{{ post.url }}">Lees meer</a>
-
-    </li>
-    {%- endfor -%}
-
-</ul>
-
+    <ul role="list" class="articles-list">
+    <!-- {#  when u use your tags it will group it in a collection #} -->
+        <!-- {%- for  post in collections.post -%} -->
+        <li>
+            <!-- {# kijk in de post van collection.post > vind de data > pak de title  #} -->
+                <h2> {{ post.data.title }}</h2>
+                <p class="p-small"><em>door {{ post.data.presentator }} op {{ post.data.date | postDate }}</em></p>
+                <!-- {# | postDate past de addFilter toe zodat alleen de datum word getoont #} -->
+                <br>
+                <p>{{ post.data.description }}</p>
+                <a href="{{ post.url }}">Lees meer</a>
+        </li>
+        {%- endfor -%}
+    </ul>
 </section>
 
     
