--- a/src/index.njk
+++ b/src/index.njk
@@ -5,10 +5,10 @@ css: /portfolio.css
 ---
 
 <section>
-    <h1 class="scroll-animate">LEMUEL</h1>
+    <h1 class="scroll-animate">Lemuel</h1>
     <p>frontend</p>
     <p>designer & developer</p>
-    <h2 class="scroll-animate">MAGSINO</h2>
+    <h2 class="scroll-animate">Magsino</h2>
 
 
 </section>
