--- a/public/styles/detail.css
+++ b/public/styles/detail.css
@@ -2,31 +2,34 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+    font-family: Poppins;
     text-decoration: none;
-    list-style: none;
-    font-display: swap;
-} 
+    color: white;
+}
 section{
-    /* padding: 40px; */
+    padding: 40px;
     height: 100%;
+    min-height: 100vh;
     width: 100%;
-    /* background-color: #111111; */
-    background-color: black;
+    background-color: #111111;
     display: flex;
     flex-direction: column;
     justify-content: center;
-    align-items: center;
+    /* align-items: center; */
+    /* text-align: left; */
 }
-h1, h2, h3, p {
-    color: white;
+h1, h2, h3{
+    margin-bottom: 16px;
+    margin-top: 16px;
+    width: 100%;
 }
 h1{
-    font-size: 2em;
+    font-size: 2rem;
     padding-top: 20px;
     font-weight: bold;
 }
 h2{
-    font-size: 1.5em;
+    font-size: 1.5rem;
     font-weight: bold;
 }
 .p-small, a{
@@ -40,29 +43,13 @@ a{
     color: grey;
     margin-top: 10px;
     background-color: transparent;
-    margin-left: auto;
-    position: relative;
-    bottom: 0;
-
 }
 a:hover{
     color: #111111;
     background-color: grey;
     transition: .5s;
 }
-h2, p{
-    font-size: 20px;
+p{
+    width: 30rem;
 }
-.articles-list{
-    height: 100%;
-}
-.posts{
-    width: 370px;
-    height: 230x;
-    border: 2px solid #353535;
-    border-radius: 5px;
-    margin: 20px;
-    padding: 10px;
-    display: flex;
-    flex-direction: column;
-}
+
