--- a/src/_includes/base.njk
+++ b/src/_includes/base.njk
@@ -7,7 +7,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Roboto+Flex:wght@400&display=swap" rel="stylesheet">
 
     <link href='https://fonts.googleapis.com/css?family=Poppins' rel='stylesheet'>
-    <link rel="stylesheet" href="{{ css }}"/>
+    <link rel="stylesheet" href="/styles{{ css }}"/>
     {# <link rel="stylesheet" href="/style.css"/> #}
     {# <link rel="stylesheet" href="/aantekeningen.css"/> #}
 
